Fixed stripe button not showing for new subscriptions

--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -97,9 +97,12 @@ html {
         }
       }
     }
-    .stripe-button-el {
-      display: none;
+    .stripe-btn-no-display {
+      .stripe-button-el {
+        display: none;
+      }
     }
+
     .table-transparent-background {
       background-color: rgba(248, 248, 248, 0.5);
     }
